--- a/labs/lab1.qmd
+++ b/labs/lab1.qmd
@@ -1,8 +1,3 @@
----
-format:
-  gfm: default
-code-overflow: wrap 
----
 
 # LAB 1 - Climate space of an ectotherm
 
@@ -27,7 +22,7 @@ $$f = q\ –h*(b - a)$$
 2.  ***Climate space of a Lizard***
     a.  Draw the climate space of the lizard by drawing the polygon that is limited by the minimum and maximum temperatures that the lizard can support, as a function of solar radiation. Consider that the upper lethal limit for the body temperature (***bmax***) is 36ºC and the lower lethal limit for the body temperature (***bmin***) is 24ºC.
 
-        **Hint:** *polygon{graphics}* - draws the polygons whose vertices are given in x and y.
+        **Hint:** `polygon` - draws the polygons whose vertices are given in x and y.
 3.  ***Air Temperature and solar radiation throughout the day in two locations***
     a.  Plot the following values of air temperature and solar radiation that are available throughout a day in two locations. For:
 
