--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,22 @@
+::: {.content-visible when-format="pdf"}
 # Preface {.unnumbered}
+:::
+
+::: {.content-visible unless-format="pdf"}
+# Welcome {.unnumbered}
+
+This is the website for **"Ecological theory for the biodiversity crisis"** book. This book teaches ecological theory with a hands-on approach using the R language. The ecological theory topics are often presented with an emphasis on their relevance for biodiversity conservation and management.
+
+This book was created with the [Quarto](https://quarto.org) publishing system.
+
+## License
+
+This website is (and will always be) **free to use**, and is licensed under the [Creative Commons Attribution-NonCommercial-NoDerivs 4.0](https://creativecommons.org/licenses/by-nc-nd/4.0/) License.
+:::
+
+::: {.content-visible when-format="html"}
+# Preface {.unnumbered}
+:::
 
 We live in the midst of the biodiversity crisis. Biodiversity science, at first mostly a spin off from Ecology, has developed tremendously in the last two decades, becoming a truly interdisciplinary field, with contributions from Geography, Economy, Social Sciences and many other disciplines. Big data and the development of statistical ecology has also been remarkable. As I write these lines, the Global Biodiversity Information Facility or GBIF (<https://gbif.org>) is about to hit 3 billion records. The availability of large amounts of data and the availability of the open source R software (<https://www.r-project.org>) has made statistical approaches take the main stage in much of ecological research. However, at the same time, as a biodiversity researcher, practitioner, and a teacher, I find again and again the need for a good understanding of ecological theory to be able to carry out my work. This book if for all of you that have also felt a similar need.
 
@@ -12,15 +30,5 @@ But programming is not enough. In order to be able to effectively develop theory
 
 This book can be used as the support for a semester course in Ecological Theory or Ecological Modelling. I have used many of these materials over the last decade in a similar course at iDiv/University of Halle-Wittenberg. But the book can also be used as self-learning tool or even as a reference tool. It takes a lot of experience from the Primer of Ecological Theory of Joan Roughgarden, that I was lucky to have as a mentor. As she used to say, one writes papers for the reviewers and books for the readers. This book is for you.
 
-
 <!--# Explain choice or R and open software/science. 
-# Welcome {.unnumbered}
-
-This is the website for **"Ecological theory for the biodiversity crisis"** book. This book teaches ecological theory with a hands-on approach using the R language. The ecological theory topics are often presented with an emphasis on their relevance for biodiversity conservation and management.
-
-This book was created with the [Quarto](https://quarto.org) publishing system.
-
-## License
-
-This website is (and will always be) **free to use**, and is licensed under the [Creative Commons Attribution-NonCommercial-NoDerivs 4.0](https://creativecommons.org/licenses/by-nc-nd/4.0/) License.
 -->
