--- a/labs.qmd
+++ b/labs.qmd
@@ -2,12 +2,32 @@
 
 {{< include labs/_climatespace.qmd >}}
 
+{{< pagebreak >}}
+
 {{< include labs/_optimalforaging.qmd >}}
+
+{{< pagebreak >}}
 
 {{< include labs/_evogames.qmd >}}
 
+{{< pagebreak >}}
+
 {{< include labs/_dispersal.qmd >}}
+
+{{< pagebreak >}}
 
 {{< include labs/_popgrowth.qmd >}}
 
+{{< pagebreak >}}
+
 {{< include labs/_pva.qmd >}} 
+
+{{< pagebreak >}}
+
+{{< include labs/_cameratrapper.qmd >}} 
+
+{{< pagebreak >}}
+
+{{< include labs/_fishery.qmd >}} 
+
+{{< pagebreak >}}
