Added road kill exercise. Set intro_to_R to freeze mode.

--- a/labs.qmd
+++ b/labs.qmd
@@ -20,14 +20,18 @@
 
 {{< pagebreak >}}
 
-{{< include labs/_pva.qmd >}} 
+{{< include labs/_pva.qmd >}}
 
 {{< pagebreak >}}
 
-{{< include labs/_cameratrapper.qmd >}} 
+{{< include labs/_cameratrapper.qmd >}}
 
 {{< pagebreak >}}
 
-{{< include labs/_fishery.qmd >}} 
+{{< include labs/_fishery.qmd >}}
+
+{{< pagebreak >}}
+
+{{< include labs/_roadkill.qmd >}}
 
 {{< pagebreak >}}
