--- a/labs/_roadkill.qmd
+++ b/labs/_roadkill.qmd
@@ -12,6 +12,8 @@
 | *daytime in **spring and summer (April-Sept)***      |                                                        |
 |                                                      |                                                        |
 | *as they are foraging for food to feed their young.* |                                                        |
+|                                                      |                                                        |
+| Source photo: Wikipedia, CC0.                        |                                                        |
 +------------------------------------------------------+--------------------------------------------------------+
 
 **Goals of the exercise**:
