--- a/labs/_climatespace_tutorial.qmd
+++ b/labs/_climatespace_tutorial.qmd
@@ -1,3 +1,8 @@
+---
+execute:
+  freeze: auto  # re-render only when source changes
+---
+
 ## Plotting real life ecophysiological from *Anolis* lizards.
 
 <!--# author: "Andres Marmol" !-->
